[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/CitySpawner.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Member.tscn" type="PackedScene" id=2]

[node name="CitySpawner" type="Node2D"]
script = ExtResource( 1 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="ButtonContainer" type="PanelContainer" parent="UI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -152.0
margin_top = 1.0
margin_right = 1.0
margin_bottom = 164.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainContainer" type="MarginContainer" parent="UI/ButtonContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 146.0
margin_bottom = 156.0

[node name="Separator" type="VBoxContainer" parent="UI/ButtonContainer/MainContainer"]
margin_right = 139.0
margin_bottom = 149.0

[node name="CitiesCounter" type="Label" parent="UI/ButtonContainer/MainContainer/Separator"]
margin_right = 139.0
margin_bottom = 14.0
text = "Loaded cities: "

[node name="Label" type="Label" parent="UI/ButtonContainer/MainContainer/Separator"]
margin_top = 18.0
margin_right = 139.0
margin_bottom = 32.0
text = "127 - - - - - - - - -  144"

[node name="WhichCities" type="CheckButton" parent="UI/ButtonContainer/MainContainer/Separator"]
margin_left = 31.0
margin_top = 36.0
margin_right = 107.0
margin_bottom = 76.0
size_flags_horizontal = 4
align = 1

[node name="Spawners" type="HBoxContainer" parent="UI/ButtonContainer/MainContainer/Separator"]
margin_top = 80.0
margin_right = 139.0
margin_bottom = 100.0

[node name="Spawn" type="Button" parent="UI/ButtonContainer/MainContainer/Separator/Spawners"]
margin_right = 65.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Spawn"

[node name="Despawn" type="Button" parent="UI/ButtonContainer/MainContainer/Separator/Spawners"]
margin_left = 69.0
margin_right = 139.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Despawn"

[node name="HSeparator" type="HSeparator" parent="UI/ButtonContainer/MainContainer/Separator"]
margin_top = 104.0
margin_right = 139.0
margin_bottom = 119.0
custom_constants/separation = 15

[node name="Member" parent="." instance=ExtResource( 2 )]
[connection signal="toggled" from="UI/ButtonContainer/MainContainer/Separator/WhichCities" to="." method="_on_WhichCities_toggled"]
[connection signal="pressed" from="UI/ButtonContainer/MainContainer/Separator/Spawners/Spawn" to="." method="_on_Spawn_pressed"]
[connection signal="pressed" from="UI/ButtonContainer/MainContainer/Separator/Spawners/Despawn" to="." method="_on_Despawn_pressed"]
